--- a/www/index.html
+++ b/www/index.html
@@ -34,15 +34,12 @@
 
 </head>
 <body ng-app="salesman">
-
-<ion-pane>
-  <ion-nav-bar class="bar-positive">
-    <ion-nav-back-button></ion-nav-back-button>
-  </ion-nav-bar>
-  <ion-content>
-    <ion-nav-view></ion-nav-view>
-  </ion-content>
-</ion-pane>
+<ion-nav-bar class="bar-positive">
+  <ion-nav-back-button></ion-nav-back-button>
+</ion-nav-bar>
+<ion-content class="has-bouncing has-header has-subheader has-padding">
+  <ion-nav-view></ion-nav-view>
+</ion-content>
 </body>
 </html>
 
